--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-streamlit==1.31.0 pandas==2.2.2 numpy==1.26.4 yfinance==0.2.44 scikit-learn==1.5.1 plotly==5.24.1
+streamlit>=1.31.0 pandas>=2.2.2 numpy>=1.26.4 yfinance>=0.2.44 scikit-learn>=1.5.1 plotly>=5.24.1
