--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
-streamlit==1.31.0 pandas==2.2.2 numpy==1.26.4 yfinance==0.2.44 scikit-learn==1.5.1 plotly==5.24.1
+streamlit>=1.28.0
+pandas>=2.0.3
+numpy>=1.24.3
+plotly>=5.15.0
+matplotlib>=3.7.2
+scikit-learn>=1.3.0
+joblib>=1.3.2
+yfinance>=0.2.28
+kaggle>=1.5.16
+python-dateutil>=2.8.2
+pytz>=2023.3
+six>=1.16.0
+setuptools>=68.0.0
+wheel>=0.41.0
+pip>=23.2.1
